fix: fix overflow of text and add overflow auto to make it scrollable in mobile

--- a/src/components/QuickFilter/style.scss
+++ b/src/components/QuickFilter/style.scss
@@ -1,3 +1,3 @@
 .zpl-quick-filter {
-  @apply inline-flex items-center gap-2xl;
+  @apply inline-flex items-center gap-2xl overflow-x-auto;
 }
